@@ -1,38 +1,35 @@
 package kim.jaehoon.studentable.signo.domain.payload;
 
 import kr.go.neis.api.SchoolMenu;
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-@Data
+@Getter @Setter
 @NoArgsConstructor
-@AllArgsConstructor
 public class Menu {
+
     private List<String> breakfast;
     private List<String> lunch;
     private List<String> dinner;
 
-    public Menu fromSchoolMenu(SchoolMenu schoolMenu) {
+    public Menu(String breakfast, String lunch, String dinner) {
+        this.breakfast = toList(breakfast
+                .replaceAll("[0-9.&amp*]", "")
+                .replaceAll(";", "/"));
+        this.lunch = toList(lunch
+                .replaceAll("[0-9.&amp*]", "")
+                .replaceAll(";", "/"));
+        this.dinner = toList(dinner
+                .replaceAll("[0-9.&amp*]", "")
+                .replaceAll(";", "/"));
 
-        this.breakfast = toList(schoolMenu.breakfast
-                .replaceAll("[0-9.&amp]", "")
-                .replaceAll(";", "/"));
-        this.lunch = toList(schoolMenu.lunch
-                .replaceAll("[0-9.&amp]", "")
-                .replaceAll(";", "/"));
-        this.dinner = toList(schoolMenu.dinner
-                .replaceAll("[0-9.&amp]", "")
-                .replaceAll(";", "/"));
-
-        return this;
     }
 
     private List<String> toList(String menu) {
-        return new ArrayList<>(Arrays.asList(menu.split("\n")));
+        return menu.equals("") ? List.of("급식이 없습니다.") : List.of(menu.split("\n"));
     }
+
 }
